# python-piscine

./: .gitignore  Dockerfile  Makefile  README.md  requirements.txt
py-00/ex00/: Hello.py
py-00/ex01/: format_ft_time.py
py-00/ex02/: find_ft_type.py
py-00/ex03/: NULL_not_found.py
py-00/ex04/: whatis.py
py-00/ex05/: building.py
py-00/ex06/: filterstring.py  ft_filter.py
py00/: README.md  requirements.txt
py00/ex00/: Hello.py  README.md
py00/ex01/: README.md  format_ft_time.py
py00/ex02/: README.md  find_ft_type.py  tester.py
py00/ex03/: NULL_not_found.py  README.md  tester.py
py00/ex04/: README.md  whatis.py
py00/ex05/: README.md  building.py
py00/ex06/: ft_filter.py
py01/ex00/: give_bmi.py  tester.py
py01/ex01/: array2D.py  tester.py
py01/ex02/: load_image.py
py01/ex03/: load_image.py  zoom.py
py_00/ex00/: Hello.py
py_00/ex01/: format_ft_time.py
py_00/ex03/: NULL_not_found.py
py_00/ex04/: whatis.py
py_00/ex06/: filterstring.py
py_00/ex07/: sos.py
py_00/ex08/: Loading.py
py_00/ex09/: LICENSE  README.md  count_in_list.py  pyproject.toml
