[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
authors = [
  { name = "td-melo", email = "td-melo@student.42abudhabi.ae" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.6"
Homepage = "https://github.com/tehuanmelo/ft_package"